--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -67,7 +67,9 @@
 \newcommand{\Sperner}{\textsc{Sperner}}
 \newcommand{\Brouwer}{\textsc{Brouwer}}
 \newcommand{\EndOfPotentialLine}{\textsc{EndOfPotentialLine}}
+\newcommand{\SinkOfPotentialLine}{\textsc{SinkOfPotentialLine}}
 \newcommand{\EndOfLine}{\textsc{EndOfLine}}
+\newcommand{\SinkOfLine}{\textsc{SinkOfLine}}
 \newcommand{\Arrival}{\textsc{Arrival}}
 
 \newcommand{\binstr}{\{0, 1\}^*}
