Small LaTeX linting fixes

--- a/content/toc.tex
+++ b/content/toc.tex
@@ -25,6 +25,6 @@
 \let\cleardoublepage\bigskip
 \let\clearpage\bigskip
 
-\listofalgorithms %Output the list of algorithms
+\listofalgorithms{} %Output the list of algorithms
 
 \endgroup
