Fix header font styling

--- a/styling/kao.sty
+++ b/styling/kao.sty
@@ -1092,10 +1092,10 @@
 	]{Libertinus Serif}
 	\setsansfont[ % Libertinus Sans font
 		Scale=1
-	]{Libertinus Sans}
+	]{Fira Sans Light}
 	\setmonofont[ % Libertinus Mono font
 		Scale=.89
-	]{Liberation Mono}
+	]{Fira Mono}
 	\setmathfont{Libertinus Math} % Libertinus Math font
 	\ifluatex
 	\else
