Add UEOPL Macro

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -67,6 +67,7 @@
 \newcommand{\Sperner}{\textsc{Sperner}}
 \newcommand{\Brouwer}{\textsc{Brouwer}}
 \newcommand{\EndOfPotentialLine}{\textsc{EndOfPotentialLine}}
+\newcommand{\UniqueEndOfPotentialLine}{\textsc{UniqueEndOfPotentialLine}}
 \newcommand{\SinkOfPotentialLine}{\textsc{SinkOfPotentialLine}}
 \newcommand{\EndOfLine}{\textsc{EndOfLine}}
 \newcommand{\SinkOfLine}{\textsc{SinkOfLine}}
