Add special command for itemize inside problems

--- a/preamble.tex
+++ b/preamble.tex
@@ -152,6 +152,9 @@
 \setlist[enumerate,1]{leftmargin=7mm, label={(\arabic*)}, font={\bfseries}}% Make left margin smaller
 \setlist[itemize, 1]{leftmargin=7mm}% Make left margin smaller
 
+%Special item tag for problems
+\newcommand{\itemspecial}[1]{\item[\textbf{(#1)}]}
+
 %Settings for the algorithm2e package
 %Custom comments
 \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
