Add support for 2nd level of indent in itemize

--- a/preamble.tex
+++ b/preamble.tex
@@ -150,6 +150,7 @@
 %Enumerate settings
 \RequirePackage{enumitem}
 \setlist[enumerate,1]{leftmargin=7mm, label={(\arabic*)}, font={\bfseries}}% Make left margin smaller
+\setlist[enumerate,2]{leftmargin=7mm, label={(\roman*)}, font={\bfseries}}% Make left margin smaller
 \setlist[itemize, 1]{leftmargin=7mm}% Make left margin smaller
 
 %Special item tag for problems
