Large scale restructuring of the thesis

--- a/thesis.tex
+++ b/thesis.tex
@@ -26,17 +26,19 @@
 \mainmatter{} % Denotes the start of the main document content, resets page numbering and uses arabic numbers
 \setchapterstyle{kao} % Choose the default chapter heading style
 
-\input{content/chapters/indroduction.tex} %Insert the first chapter
-\input{content/chapters/preliminaries.tex} %Insert the second chapter
-\input{content/chapters/Location_Tarski.tex} %Insert the third chapter
-\input{content/chapters/PPAD_reduction.tex} %Insert the fourth chapter
-\input{content/chapters/EOPL_reduction.tex} %Insert the fifth chapter
+\input{content/chapters/01_Indroduction.tex}
+\input{content/chapters/02_Preliminaries.tex}
+\input{content/chapters/03_Location_Tarski.tex}
+\input{content/chapters/04_PPAD_reduction.tex}
+\input{content/chapters/05_Understanding.tex}
+\input{content/chapters/06_EOPL_reduction.tex}
+
 %\newpartpage{Part One}
 
 \appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
 \newpartpage{Appendix}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------- --------------------------------
 
 \backmatter{} % Denotes the end of the main document content
 \setchapterstyle{plain} % Output plain chapters from this point onwards
