--- a/content/abstract.tex
+++ b/content/abstract.tex
@@ -1,3 +1,3 @@
 \chapter*{Abstract}
 
-Insert the abstract here.
+This thesis investigates the computational complexity of the Tarski fixed-point problem within the \TFNP\ framework of total search problem. Specifically, it explores the \Tarski\ problem's place within \TFNP's subclasses, in particular within \PPAD, \PLS, and \EOPL\@. It aims to understand why \Tarski\ lies in \EOPL\ and to construct a reduction from \Tarski\ to the \EndOfPotentialLine\ problem. This will ultimately not be achieved, but the theis achieves a novel reduction from \Tarski\ to \EndOfLine\ using Sperner's Lemma instead of Brouwer's fixed-point theorem. Furthermore, the thesis studies the structure of \Tarski-instances, and gives directions for further research towards finding a direct reduction from \Tarski\ to \EndOfPotentialLine\@.
