--- a/thesis.tex
+++ b/thesis.tex
@@ -32,6 +32,7 @@
 \input{content/chapters/04_PPAD_reduction.tex}
 \input{content/chapters/05_Understanding.tex}
 \input{content/chapters/06_Further_Ideas.tex}
+\input{content/chapters/07_Conclusion.tex}
 
 %\newpartpage{Part One}
 
