--- a/thesis.tex
+++ b/thesis.tex
@@ -36,8 +36,8 @@
 
 %\newpartpage{Part One}
 
-\appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
-\newpartpage{Appendix}
+%\appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
+%\newpartpage{Appendix}
 
 %-------------------------------------------------------- --------------------------------
 
