--- a/bibliography.bib
+++ b/bibliography.bib
@@ -433,7 +433,7 @@
 	file         = {Submitted Version:/home/nils/Zotero/storage/WS5MMWTF/Fearnley et al. - 2022 - A Faster Algorithm for Finding Tarski Fixed Points.pdf:application/pdf}
 }
 @article{fearnley_complexity_2023,
-	title        = {The Complexity of Gradient Descent: {CLS} = {PPAD} \cap{} {PLS}},
+	title        = {The Complexity of Gradient Descent: {CLS} = {PPAD} ∩ {PLS}},
 	shorttitle   = {The Complexity of Gradient Descent},
 	author       = {Fearnley, John and Goldberg, Paul and Hollender, Alexandros and Savani, Rahul},
 	volume       = 70,
